force-app/main/default/objects/maps__MarkerLayer__c/maps__MarkerLayer__c.object-meta.xml
<CustomObject>
    <label>Maps Marker Layer</label>
    <nameField>
        <label>Maps Marker Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Marker Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>