force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__ActivityFilter__c.field-meta.xml
<CustomField>
    <fullName>maps__ActivityFilter__c</fullName>
    <label>Activity Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>