force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__AdvancedOptions__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvancedOptions__c</fullName>
    <label>Advanced Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>