force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object</label>
    <referenceTo>maps__BaseObject__c</referenceTo>
    <relationshipName>Saved_Queries</relationshipName>
    <type>Lookup</type>
</CustomField>