force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__ColorAssignment__c.field-meta.xml
<CustomField>
    <fullName>maps__ColorAssignment__c</fullName>
    <label>Color Assignment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>