force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__ColorsAssignedDynamically__c.field-meta.xml
<CustomField>
    <fullName>maps__ColorsAssignedDynamically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colors Assigned Dynamically</label>
    <type>Checkbox</type>
</CustomField>