force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__CustomQuery__c.field-meta.xml
<CustomField>
    <fullName>maps__CustomQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Query</label>
    <type>Checkbox</type>
</CustomField>