force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__IconColor__c.field-meta.xml
<CustomField>
    <fullName>maps__IconColor__c</fullName>
    <label>Icon Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>