force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__MaxQuerySizeExternal__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxQuerySizeExternal__c</fullName>
    <label>Max Query Size External Objs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>