force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__OrgWide__c.field-meta.xml
<CustomField>
    <fullName>maps__OrgWide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization Wide</label>
    <type>Checkbox</type>
</CustomField>