force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__OwnerFilterId__c.field-meta.xml
<CustomField>
    <fullName>maps__OwnerFilterId__c</fullName>
    <label>OwnerFilterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>