force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__PicklistField__c.field-meta.xml
<CustomField>
    <fullName>maps__PicklistField__c</fullName>
    <label>Picklist Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>