force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__ProximityOptions__c.field-meta.xml
<CustomField>
    <fullName>maps__ProximityOptions__c</fullName>
    <label>Proximity Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>