force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__Query__c.field-meta.xml
<CustomField>
    <fullName>maps__Query__c</fullName>
    <label>Query</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>