force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__QueryComponents__c.field-meta.xml
<CustomField>
    <fullName>maps__QueryComponents__c</fullName>
    <label>Query Components</label>
    <summaryForeignKey>maps__MarkerLayerComponent__c.maps__MarkerLayer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>