force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__QueryKey__c.field-meta.xml
<CustomField>
    <fullName>maps__QueryKey__c</fullName>
    <label>Query Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>