force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__RefreshInterval__c.field-meta.xml
<CustomField>
    <fullName>maps__RefreshInterval__c</fullName>
    <label>Refresh Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>