force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__RelatedListCount__c.field-meta.xml
<CustomField>
    <fullName>maps__RelatedListCount__c</fullName>
    <label>Related List Count</label>
    <summaryForeignKey>maps__MarkerLayerRelatedList__c.maps__SavedQuery__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>