force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__RowLimit__c.field-meta.xml
<CustomField>
    <fullName>maps__RowLimit__c</fullName>
    <defaultValue>250000</defaultValue>
    <label>Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>