force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__RowOrderDirection__c.field-meta.xml
<CustomField>
    <fullName>maps__RowOrderDirection__c</fullName>
    <label>Row Order Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>