force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__ShapeAssignment__c.field-meta.xml
<CustomField>
    <fullName>maps__ShapeAssignment__c</fullName>
    <label>ShapeAssignment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>