force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__ShapeField__c.field-meta.xml
<CustomField>
    <fullName>maps__ShapeField__c</fullName>
    <label>Shape Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>