force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__Tooltip1__c.field-meta.xml
<CustomField>
    <fullName>maps__Tooltip1__c</fullName>
    <label>Tooltip One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>