force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__Tooltip4__c.field-meta.xml
<CustomField>
    <fullName>maps__Tooltip4__c</fullName>
    <label>Tooltip Four</label>
    <length>255</length>
    <type>Text</type>
</CustomField>