force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__Tooltip5__c.field-meta.xml
<CustomField>
    <fullName>maps__Tooltip5__c</fullName>
    <label>Tooltip Five</label>
    <length>255</length>
    <type>Text</type>
</CustomField>