force-app/main/default/objects/maps__MarkerLayer__c/fields/maps__User__c.field-meta.xml
<CustomField>
    <fullName>maps__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Saved_Queries</relationshipName>
    <type>Lookup</type>
</CustomField>