force-app/main/default/objects/maps__MarkerLayer__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <columns>NAME</columns>
    <columns>maps__PicklistField__c</columns>
    <columns>maps__OrgWide__c</columns>
    <columns>maps__BaseObject__c</columns>
    <columns>maps__Tooltip8__c</columns>
    <columns>maps__Tooltip5__c</columns>
    <columns>maps__Tooltip4__c</columns>
    <columns>maps__Tooltip1__c</columns>
    <columns>maps__Tooltip7__c</columns>
    <columns>maps__Tooltip6__c</columns>
    <columns>maps__Tooltip3__c</columns>
    <columns>maps__Tooltip2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>